RESOLVED FIXED15943
-webkit-transform matrix does not work
https://bugs.webkit.org/show_bug.cgi?id=15943
Summary -webkit-transform matrix does not work
Erik Arvidsson
Reported 2007-11-11 18:05:22 PST
The matrix value for -webkit-tranform seems broken. The following value, which means rotate 30 degrees is broken does . matrix(0.866025px, 0.5px, -0.5px, 0.866025px, 0, 0) This value works fine with SVG transforms and IE matrix filter so I'm pretty sure my math is correct. I've tried without px and with and with commas... The px is really confusing. An affine transformation matrix should not have a unit. It seems fine to have units for the dx and dy but not for the ohter 4 elements. I've verified that this happens both on Windows and on Mac OS X 10.4
Attachments
Rotates a div 30 deg using the matrix value (215 bytes, text/html)
2007-11-11 18:06 PST, Erik Arvidsson
no flags
Parse matrix() arguments as numbers (16.01 KB, patch)
2007-11-22 10:22 PST, mitz
mjs: review+
Erik Arvidsson
Comment 1 2007-11-11 18:06:24 PST
Created attachment 17191 [details] Rotates a div 30 deg using the matrix value
mitz
Comment 2 2007-11-11 18:42:45 PST
Yeah, the values are rounded to integers which makes no sense for the first 4 entries
Dave Hyatt
Comment 3 2007-11-11 20:52:52 PST
Yeah should probably just do numbers in all six spots.
mitz
Comment 4 2007-11-22 10:22:57 PST
Created attachment 17444 [details] Parse matrix() arguments as numbers The proposed spec says all six entries are numbers...
Maciej Stachowiak
Comment 5 2007-11-22 19:34:41 PST
Comment on attachment 17444 [details] Parse matrix() arguments as numbers r=me
mitz
Comment 6 2007-11-22 20:11:38 PST
Note You need to log in before you can comment on or make changes to this bug.