WebCore:

Reviewed by Maciej Stachowiak.

        - fix http://bugs.webkit.org/show_bug.cgi?id=15943
          -webkit-transform matrix does not work

        Test: fast/transforms/matrix-01.html

        Parse all six matrix entries as numbers.

        * css/CSSParser.cpp:
        (WebCore::TransformOperationInfo::TransformOperationInfo):
        (WebCore::CSSParser::parseTransform):
        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::applyProperty):
        * rendering/RenderStyle.cpp:
        (WebCore::MatrixTransformOperation::blend):
        * rendering/RenderStyle.h:
        (WebCore::MatrixTransformOperation::MatrixTransformOperation):
        (WebCore::MatrixTransformOperation::apply):

LayoutTests:

        Reviewed by Maciej Stachowiak.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=15943
          -webkit-transform matrix does not work

        * fast/transforms/matrix-01.html: Added.
        * platform/mac/fast/transforms/matrix-01-expected.checksum: Added.
        * platform/mac/fast/transforms/matrix-01-expected.png: Added.
        * platform/mac/fast/transforms/matrix-01-expected.txt: Added.



Canonical link: https://commits.webkit.org/21897@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27978 268f45cc-cd09-0410-ab3c-d52691b4dbfc