WebCore/css/CSSStyleSelector.cpp
@@ -3977,13 +3977,12 @@ void CSSStyleSelector::applyProperty(int id, CSSValue *value)
                         CSSPrimitiveValue* fourthValue = static_cast<CSSPrimitiveValue*>(values->item(3));
                         CSSPrimitiveValue* fifthValue = static_cast<CSSPrimitiveValue*>(values->item(4));
                         CSSPrimitiveValue* sixthValue = static_cast<CSSPrimitiveValue*>(values->item(5));
-                        bool ok;
-                        MatrixTransformOperation* matrix = new MatrixTransformOperation(convertToLength(firstValue, style, &ok),
-                                                                                        convertToLength(secondValue, style, &ok),
-                                                                                        convertToLength(thirdValue, style, &ok),
-                                                                                        convertToLength(fourthValue, style, &ok),
-                                                                                        convertToLength(fifthValue, style, &ok),
-                                                                                        convertToLength(sixthValue, style, &ok));
+                        MatrixTransformOperation* matrix = new MatrixTransformOperation(firstValue->getDoubleValue(),
+                                                                                        secondValue->getDoubleValue(),
+                                                                                        thirdValue->getDoubleValue(),
+                                                                                        fourthValue->getDoubleValue(),
+                                                                                        fifthValue->getDoubleValue(),
+                                                                                        sixthValue->getDoubleValue());
                         operations.append(matrix);
                         break;
                     }   
